[project]
name = "nosbp"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexandr Novoseletsky",email = "night2324@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard] (>=0.139.0,<0.140.0)"
]

[tool.poetry]
packages = [{include = "nosbp", from = "src"}]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
